rgw: fix rgw_data_sync_info::json_decode()

this was trying to decode a 'uint64_t instance_id' into the wrong
variable 'uint32_t num_shards'

datalog trimming relies on this json format, and decode failures here
prevent any trimming from taking place

Fixes: http://tracker.ceph.com/issues/38373

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 2b51d52bab2bd95834524316d5e71ff362aa0507)